--- a/requests-json-nlp.ipynb
+++ b/requests-json-nlp.ipynb
@@ -186,6 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Alison\n",
     "2. Read in the contents of your file.  Print the lyrics of the song (not the entire dictionary!) and use spaCyTextBlob to perform sentiment analysis on the lyrics.  Print the polarity score of the sentiment analysis.  Given that the range of the polarity score is `[-1.0,1.0]` which corresponds to how positive or negative the text in question is, do you think the lyrics have a more positive or negative connotaion?  Answer this question in a comment in your code cell."
    ]
   },
@@ -286,6 +287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Alison\n",
     "3. Write a function that takes an artist, song, and filename, accesses the lyrics.ovh api to get the song lyrics, and writes the results to the specified filename.  Test this function by getting the lyrics to any four songs of your choice and storing them in different files."
    ]
   },
@@ -340,6 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Alison\n",
     "4. Write a function that takes the name of a file that contains song lyrics, loads the file, performs sentiment analysis, and returns the polarity score.  Use this function to print the polarity scores (with the name of the song) of the three files you created in question 3.  Does the reported polarity match your understanding of the song's lyrics? Why or why not do you think that might be?  Answer the questions in either a comment in the code cell or a markdown cell under the code cell."
    ]
   },
@@ -386,6 +389,36 @@
    "metadata": {},
    "source": [
     "I am suprised that Kiwi and Still into You both have negative scores. I always think these are upbeat, happier songs, but after looking at the lyrics more in-depth I understand why the program would think that. First date also has a really low score that is close to 0 and I would think that would be higher as well. It is talking all about going on a first date with someone which should bring excitment. I am not suprised by Sleep on the Floor, however. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook requests-json-nlp.ipynb to html\n",
+      "[NbConvertApp] Writing 298019 bytes to requests-json-nlp.html\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Export to HTML\n",
+    "import os\n",
+    "os.system('jupyter nbconvert --to html requests-json-nlp.ipynb')"
    ]
   }
  ],
